--- a/【布客】利用 Python 进行数据分析 第二版/C4.ipynb
+++ b/【布客】利用 Python 进行数据分析 第二版/C4.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-21T10:15:50.190291Z",
-     "start_time": "2024-11-21T10:15:49.875771Z"
+     "end_time": "2024-11-22T11:21:55.196202Z",
+     "start_time": "2024-11-22T11:21:55.178157Z"
     }
    },
    "source": [
@@ -434,22 +434,19 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T11:59:40.870692Z",
-     "start_time": "2024-11-21T11:59:39.748193Z"
+     "end_time": "2024-11-22T04:46:38.848231Z",
+     "start_time": "2024-11-22T04:46:38.450333Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# 利用数组进行数据处理\n",
-    "points = np.arange(-5, 5, 0.01) # 1000个等距点\n",
-    "xs, ys = np.meshgrid(points, points)    # 生成网格矩阵\n",
-    "\n",
-    "z = np.sqrt(xs ** 2 + ys ** 2)\n",
+    "points = np.arange(-5, 5, 0.01) # 产生1000个等距点\n",
+    "xs, ys = np.meshgrid(points, points) # 生成网格数\n",
+    "z = np.sqrt(xs**2 + ys**2)\n",
     "import matplotlib.pyplot as plt\n",
     "plt.imshow(z, cmap=plt.cm.gray); plt.colorbar()\n",
-    "plt.title(\"Image plot of $\\sqrt{x^2 + y^2}$ for a grid of values\")\n",
-    "\n",
-    "\n"
+    "plt.title(\"Image plot of $\\sqrt{x^2 + y^2}$ for a grid of values\")\n"
    ],
    "id": "2119ca59b9a8b291",
    "outputs": [
@@ -459,7 +456,7 @@
        "Text(0.5, 1.0, 'Image plot of $\\\\sqrt{x^2 + y^2}$ for a grid of values')"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -474,7 +471,47 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 88
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-22T11:26:17.913449Z",
+     "start_time": "2024-11-22T11:26:17.892921Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 将条件逻辑表述为数组运算\n",
+    "xarr = np.array([1.1, 1.2, 1.3, 1.4, 1.5])\n",
+    "yarr = np.array([2.1, 2.2, 2.3, 2.4, 2.5])\n",
+    "cond = np.array([True, False, True, True, False])\n",
+    "\n",
+    "result = [(x if c else y) for x, y, c in zip(xarr, yarr, cond)]\n",
+    "\n",
+    "result = np.where(cond, xarr, yarr)\n",
+    "result\n",
+    "\n",
+    "arr = np.random.randn(4, 4)\n",
+    "np.where(arr > 0, 2, -2)\n",
+    "\n",
+    "np.where(arr > 0, 2, arr) # set only positive values to 2\n",
+    "\n"
+   ],
+   "id": "5d733155067383a7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.1, 2.2, 1.3, 1.4, 2.5])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 10
   },
   {
    "metadata": {},
@@ -482,7 +519,278 @@
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "5d733155067383a7"
+   "id": "3bc214f2815d2c44"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-22T11:48:24.945538Z",
+     "start_time": "2024-11-22T11:48:24.927964Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 数学和统计方法\n",
+    "arr = np.random.randn(5, 4)\n",
+    "arr.mean()\n",
+    "np.mean(arr)\n",
+    "np.sum(arr)\n",
+    "\n",
+    "arr.mean(axis=1)    # 求行的平均值\n",
+    "arr.sum(axis=0)    # 求列的和\n",
+    "\n",
+    "arr = np.array([[0, 1, 2], [3, 4, 5], [6, 7, 8]])\n",
+    "arr.cumsum(axis=0)  # 按列累加\n",
+    "arr.cumsum(axis=1)\n",
+    "\n"
+   ],
+   "id": "83556815db85b77f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.False_"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-22T11:49:12.976013Z",
+     "start_time": "2024-11-22T11:49:12.967297Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 用于布尔型数组的方法\n",
+    "arr = np.random.randn(100)\n",
+    "(arr > 0).sum() # num of positive values\n",
+    "\n",
+    "bools = np.array([False, False, True, False])\n",
+    "bools.any()\n",
+    "bools.all()\n"
+   ],
+   "id": "7332bf427df09283",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.False_"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 24
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-22T11:58:29.916331Z",
+     "start_time": "2024-11-22T11:58:29.902779Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 排序\n",
+    "arr = np.random.randn(5, 5)\n",
+    "arr.sort(1)  # 按行排序\n",
+    "\n",
+    "large_arr = np.random.randn(1000)\n",
+    "large_arr.sort()\n",
+    "large_arr[int(0.5 * len(large_arr))] # 计算二分位数\n"
+   ],
+   "id": "c9928fbb128e10c7",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(-0.009915575090930873)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 45
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-22T12:07:27.604488Z",
+     "start_time": "2024-11-22T12:07:27.587732Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 唯一化及其他的集合逻辑\n",
+    "import numpy as np\n",
+    "names = np.array(['Will', 'Bob', 'Joe', 'Will', 'Bob', 'Will', 'Joe', 'Joe'])\n",
+    "np.unique(names)    # 输出不重复的元素, 按字母顺序排序\n",
+    "ints = np.array([3, 3, 3, 2, 2, 1, 1, 4, 4])\n",
+    "np.unique(ints)\n",
+    "\n",
+    "values = np.array([6, 0, 0, 3, 2, 5, 6])\n",
+    "np.isin(values, [2, 3, 2, 2])   # 用于测试一个数组中的值在另一个数组中的成员资格，返回一个布尔型数组\n"
+   ],
+   "id": "4fd5b58b2b1e9139",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, False, False,  True,  True, False, False])"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 54
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-22T12:38:12.190779Z",
+     "start_time": "2024-11-22T12:38:12.173650Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 用于数组的文件输入输出\n",
+    "arr = np.arange(10)\n",
+    "np.save('C4_some_array', arr)\n",
+    "\n",
+    "np.load('C4_some_array.npy')    # 通过np.load读取磁盘上的数组\n",
+    "np.savez('array_archive.npz', a=arr, b=arr) # 将多个数组保存到一个未压缩文件中\n",
+    "arch = np.load('array_archive.npz') # 加载.npz文件,得到类似字典的对象\n",
+    "arch['b']\n",
+    "np.savez_compressed('arrays_compressed.npz', a=arr, b=arr)\n",
+    "\n",
+    "a = np.load('arrays_compressed.npz') # 压缩数据   "
+   ],
+   "id": "1a0abd56b63b9617",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "NpzFile 'arrays_compressed.npz' with keys: a, b"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 65
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-22T12:46:00.591372Z",
+     "start_time": "2024-11-22T12:46:00.571141Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# linear algebra\n",
+    "x = np.array([[1, 2, 3], [4, 5, 6]], dtype=float)\n",
+    "y = np.array([[6, 23], [-1, 7], [8, 9]], dtype=float)\n",
+    "x.dot(y) \n",
+    "np.dot(x, y)\n",
+    "\n",
+    "np.dot(x, np.ones(3))\n",
+    "x @ np.ones(3)\n",
+    "\n"
+   ],
+   "id": "89c058e366e9ba38",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.00000000e+00, -5.75009202e-17,  9.46314530e-17,\n",
+       "         4.30587854e-16, -2.96800242e-16],\n",
+       "       [ 2.71431615e-16,  1.00000000e+00,  4.98880497e-17,\n",
+       "         2.68389225e-16,  1.25653777e-17],\n",
+       "       [-2.32949005e-16, -3.25584974e-17,  1.00000000e+00,\n",
+       "        -2.07365745e-16,  1.48560215e-17],\n",
+       "       [ 5.08878077e-16, -4.09266789e-16, -1.96466861e-17,\n",
+       "         1.00000000e+00, -1.86488681e-16],\n",
+       "       [ 6.95716977e-17,  5.34196877e-17,  4.05239929e-17,\n",
+       "         2.27618526e-16,  1.00000000e+00]])"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 79
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "acd774e9f1cfb5c4"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "892501737386c8ed"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-22T13:24:02.630503Z",
+     "start_time": "2024-11-22T13:24:02.617959Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from numpy.linalg import inv, qr\n",
+    "X = np.random.randn(5, 5)\n",
+    "mat = X.T.dot(X)\n",
+    "inv(mat)\n",
+    "mat.dot(inv(mat))\n",
+    "q, r = qr(mat)\n",
+    "r"
+   ],
+   "id": "50b42f72f3f5fdaa",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3.02202016, -2.1244115 , -0.68780101,  1.10863287,  6.82413996],\n",
+       "       [ 0.        , -3.53897739,  3.0303152 ,  5.19871614,  3.87077791],\n",
+       "       [ 0.        ,  0.        , -0.3290079 , -0.13253368,  0.45521473],\n",
+       "       [ 0.        ,  0.        ,  0.        , -2.25461393,  2.58764312],\n",
+       "       [ 0.        ,  0.        ,  0.        ,  0.        ,  0.56232357]])"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 105
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "bdf3cf09fad84773"
   }
  ],
  "metadata": {
