--- a/AI Learn/Stage 7 DeepLearning/pytorch_intro.ipynb
+++ b/AI Learn/Stage 7 DeepLearning/pytorch_intro.ipynb
@@ -6,16 +6,17 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-10T04:18:05.355158Z",
-     "start_time": "2025-02-10T04:18:05.351633Z"
+     "end_time": "2025-02-11T05:54:20.866680Z",
+     "start_time": "2025-02-11T05:54:14.109633Z"
     }
    },
    "source": [
     "import torch\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from torch import manual_seed"
    ],
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 1
   },
   {
    "metadata": {
@@ -322,12 +323,471 @@
    "execution_count": 88
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T05:58:23.124338Z",
+     "start_time": "2025-02-11T05:58:23.110856Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 张量转numpy, 默认共享内存: 修改numpy也会修改torch\n",
+    "t1 = torch.tensor([1, 2, 3])\n",
+    "t1_np = t1.numpy().copy()   # 创建新的numpy, 不共享内存\n",
+    "\n",
+    "\n"
+   ],
+   "id": "ecb76577b372b4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1, 2, 3])\n"
+     ]
+    }
+   ],
+   "execution_count": 4
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T06:02:55.508222Z",
+     "start_time": "2025-02-11T06:02:55.495778Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# numpy转Tensor: from_numpy 默认共享内存\n",
+    "t2_np = np.arange(0, 10)\n",
+    "t2 = torch.from_numpy(t2_np)\n",
+    "t3 = torch.tensor(t2_np)    # Tensor默认不共享内存\n",
+    "t2_np[0] = 100\n",
+    "t2, t3"
+   ],
+   "id": "b26b3463b378391e",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([100,   1,   2,   3,   4,   5,   6,   7,   8,   9]),\n",
+       " tensor([0, 1, 2, 3, 4, 5, 6, 7, 8, 9]),\n",
+       " torch.int64)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T06:06:59.646079Z",
+     "start_time": "2025-02-11T06:06:59.631480Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "#标量张量和数字的转换\n",
+    "t4 = torch.tensor(10)   # 创建一个标量张量\n",
+    "t5 = torch.tensor([10])\n",
+    "t6 = torch.tensor([[30]])\n",
+    "print(t4.shape, t5.shape, t6.shape)\n",
+    "\n",
+    "print(t4.item(), t5.item(), t6.item())  # 张量仅含1个元素, 可以用item()获取\n",
+    "print(t4.data, t5.data, t6.data)"
+   ],
+   "id": "cbaaafc537866e6c",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([]) torch.Size([1]) torch.Size([1, 1])\n",
+      "10 10 30\n",
+      "tensor(10) tensor([10]) tensor([[30]])\n"
+     ]
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T06:32:53.261438Z",
+     "start_time": "2025-02-11T06:32:53.251258Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 张量拼接 \n",
+    "# cat: 按维拼接\n",
+    "torch.manual_seed(0)    # 设置随机种子\n",
+    "t1 = torch.randint(0, 10, [3, 4, 5])\n",
+    "t2 = torch.randint(0, 10, [3, 4, 5])\n",
+    "\n",
+    "# 1. 按维拼接\n",
+    "t3 = torch.cat([t1, t2], dim=0)\n",
+    "t4 = torch.cat([t1, t2], dim=1)\n",
+    "t5 = torch.cat([t1, t2], dim=2)\n",
+    "\n",
+    "t3, t4, t5\n",
+    "\n"
+   ],
+   "id": "c084c2cfe12dd505",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[4, 9, 3, 0, 3],\n",
+       "          [9, 7, 3, 7, 3],\n",
+       "          [1, 6, 6, 9, 8],\n",
+       "          [6, 6, 8, 4, 3]],\n",
+       " \n",
+       "         [[6, 9, 1, 4, 4],\n",
+       "          [1, 9, 9, 9, 0],\n",
+       "          [1, 2, 3, 0, 5],\n",
+       "          [5, 2, 9, 1, 8]],\n",
+       " \n",
+       "         [[8, 3, 6, 9, 1],\n",
+       "          [7, 3, 5, 2, 1],\n",
+       "          [0, 9, 3, 1, 1],\n",
+       "          [0, 3, 6, 6, 7]],\n",
+       " \n",
+       "         [[9, 6, 3, 4, 5],\n",
+       "          [0, 8, 2, 8, 2],\n",
+       "          [7, 5, 0, 0, 8],\n",
+       "          [1, 9, 6, 1, 0]],\n",
+       " \n",
+       "         [[2, 9, 4, 3, 9],\n",
+       "          [3, 9, 3, 9, 8],\n",
+       "          [5, 3, 2, 8, 5],\n",
+       "          [6, 6, 5, 7, 2]],\n",
+       " \n",
+       "         [[5, 6, 6, 5, 4],\n",
+       "          [0, 8, 1, 7, 8],\n",
+       "          [5, 4, 4, 8, 4],\n",
+       "          [4, 9, 0, 7, 4]]]),\n",
+       " tensor([[[4, 9, 3, 0, 3],\n",
+       "          [9, 7, 3, 7, 3],\n",
+       "          [1, 6, 6, 9, 8],\n",
+       "          [6, 6, 8, 4, 3],\n",
+       "          [9, 6, 3, 4, 5],\n",
+       "          [0, 8, 2, 8, 2],\n",
+       "          [7, 5, 0, 0, 8],\n",
+       "          [1, 9, 6, 1, 0]],\n",
+       " \n",
+       "         [[6, 9, 1, 4, 4],\n",
+       "          [1, 9, 9, 9, 0],\n",
+       "          [1, 2, 3, 0, 5],\n",
+       "          [5, 2, 9, 1, 8],\n",
+       "          [2, 9, 4, 3, 9],\n",
+       "          [3, 9, 3, 9, 8],\n",
+       "          [5, 3, 2, 8, 5],\n",
+       "          [6, 6, 5, 7, 2]],\n",
+       " \n",
+       "         [[8, 3, 6, 9, 1],\n",
+       "          [7, 3, 5, 2, 1],\n",
+       "          [0, 9, 3, 1, 1],\n",
+       "          [0, 3, 6, 6, 7],\n",
+       "          [5, 6, 6, 5, 4],\n",
+       "          [0, 8, 1, 7, 8],\n",
+       "          [5, 4, 4, 8, 4],\n",
+       "          [4, 9, 0, 7, 4]]]),\n",
+       " tensor([[[4, 9, 3, 0, 3, 9, 6, 3, 4, 5],\n",
+       "          [9, 7, 3, 7, 3, 0, 8, 2, 8, 2],\n",
+       "          [1, 6, 6, 9, 8, 7, 5, 0, 0, 8],\n",
+       "          [6, 6, 8, 4, 3, 1, 9, 6, 1, 0]],\n",
+       " \n",
+       "         [[6, 9, 1, 4, 4, 2, 9, 4, 3, 9],\n",
+       "          [1, 9, 9, 9, 0, 3, 9, 3, 9, 8],\n",
+       "          [1, 2, 3, 0, 5, 5, 3, 2, 8, 5],\n",
+       "          [5, 2, 9, 1, 8, 6, 6, 5, 7, 2]],\n",
+       " \n",
+       "         [[8, 3, 6, 9, 1, 5, 6, 6, 5, 4],\n",
+       "          [7, 3, 5, 2, 1, 0, 8, 1, 7, 8],\n",
+       "          [0, 9, 3, 1, 1, 5, 4, 4, 8, 4],\n",
+       "          [0, 3, 6, 6, 7, 4, 9, 0, 7, 4]]]))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 37
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T06:31:36.241081Z",
+     "start_time": "2025-02-11T06:31:36.225098Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# stack: 按维叠加\n",
+    "\n",
+    "torch.manual_seed(0)\n",
+    "\n",
+    "t1 = torch.randint(0, 10, [2, 3])\n",
+    "t2 = torch.randint(0, 10, [2, 3])\n",
+    "\n",
+    "t3 = torch.stack([t1, t2], dim=0)\n",
+    "t4 = torch.stack([t1, t2], dim=1)\n",
+    "t5 = torch.stack([t1, t2], dim=2)\n",
+    "\n",
+    "t6 = torch.cat([t1, t2], dim=0)\n",
+    "\n",
+    "t3, t6"
+   ],
+   "id": "e1eb5f6419b019dc",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[[4, 9, 3],\n",
+       "          [0, 3, 9]],\n",
+       " \n",
+       "         [[7, 3, 7],\n",
+       "          [3, 1, 6]]]),\n",
+       " tensor([[4, 9, 3],\n",
+       "         [0, 3, 9],\n",
+       "         [7, 3, 7],\n",
+       "         [3, 1, 6]]))"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 36
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T06:52:16.201713Z",
+     "start_time": "2025-02-11T06:52:16.182752Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 张量索引\n",
+    "\n",
+    "torch.manual_seed(0)\n",
+    "t = torch.randint(0, 10, [4, 5])\n",
+    "print(t)\n"
+   ],
+   "id": "ef314500e3cbccd0",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[4, 9, 3, 0, 3],\n",
+      "        [9, 7, 3, 7, 3],\n",
+      "        [1, 6, 6, 9, 8],\n",
+      "        [6, 6, 8, 4, 3]])\n"
+     ]
+    }
+   ],
+   "execution_count": 41
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T06:54:15.800455Z",
+     "start_time": "2025-02-11T06:54:15.765707Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 1. 简单行、列索引\n",
+    "print(t[0])\n",
+    "print(t[:, 0])"
+   ],
+   "id": "6e04afb1f91e607e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([4, 9, 3, 0, 3])\n",
+      "tensor([4, 9, 1, 6])\n"
+     ]
+    }
+   ],
+   "execution_count": 43
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T07:09:39.924828Z",
+     "start_time": "2025-02-11T07:09:39.909324Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 2. 列表索引\n",
+    "print(t[[0, 1], [1, 2]])    # 返回 (0, 1)、(1, 2) 两个位置的元素\n",
+    "print(t[[[0], [1]], [1, 2]])# 返回 0、1 行的 1、2 列共4个元素"
+   ],
+   "id": "cd1726b742fca6dc",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([9, 3])\n",
+      "tensor([[9, 3],\n",
+      "        [7, 3]])\n"
+     ]
+    }
+   ],
+   "execution_count": 53
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T07:01:25.487437Z",
+     "start_time": "2025-02-11T07:01:25.460701Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 3. 范围索引\n",
+    "print(t[:3, :2]) # 前3行的前2列数据\n",
+    "print(t[2:, :2]) # 第2行到最后的前2列数据"
+   ],
+   "id": "381fbcbfbb69e249",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[4, 9],\n",
+      "        [9, 7],\n",
+      "        [1, 6]])\n",
+      "tensor([[1, 6],\n",
+      "        [6, 6]])\n"
+     ]
+    }
+   ],
+   "execution_count": 47
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T07:03:11.184403Z",
+     "start_time": "2025-02-11T07:03:11.167566Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 4. bool 索引\n",
+    "print(t[t[:, 2] > 5]) # 第3列大于5的行数据\n",
+    "print(t[:, t[1] > 5]) # 第2行大于5的列数据"
+   ],
+   "id": "b5da35ecfeecca56",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1, 6, 6, 9, 8],\n",
+      "        [6, 6, 8, 4, 3]])\n",
+      "tensor([[4, 9, 0],\n",
+      "        [9, 7, 7],\n",
+      "        [1, 6, 9],\n",
+      "        [6, 6, 4]])\n"
+     ]
+    }
+   ],
+   "execution_count": 49
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T07:10:50.440091Z",
+     "start_time": "2025-02-11T07:10:50.424088Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 5. 多维索引 \n",
+    "t_ = torch.randint(0, 10, [3, 4, 5])\n",
+    "print(t_)"
+   ],
+   "id": "e7d1e6e469de2b27",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[[9, 8, 5, 6, 4],\n",
+      "         [3, 3, 4, 0, 2],\n",
+      "         [5, 1, 2, 8, 2],\n",
+      "         [4, 8, 3, 6, 5]],\n",
+      "\n",
+      "        [[8, 8, 0, 5, 1],\n",
+      "         [3, 0, 8, 1, 1],\n",
+      "         [1, 7, 2, 2, 2],\n",
+      "         [3, 3, 6, 7, 8]],\n",
+      "\n",
+      "        [[0, 5, 0, 3, 5],\n",
+      "         [5, 3, 6, 2, 2],\n",
+      "         [5, 5, 9, 4, 3],\n",
+      "         [3, 7, 3, 8, 0]]])\n"
+     ]
+    }
+   ],
+   "execution_count": 57
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-11T07:11:38.506670Z",
+     "start_time": "2025-02-11T07:11:38.486976Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "print(t_[0, :, :])\n",
+    "print(t_[:, 0, :])\n",
+    "print(t_[:, :, 0])"
+   ],
+   "id": "463b832431402f8f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[9, 8, 5, 6, 4],\n",
+      "        [3, 3, 4, 0, 2],\n",
+      "        [5, 1, 2, 8, 2],\n",
+      "        [4, 8, 3, 6, 5]])\n",
+      "tensor([[9, 8, 5, 6, 4],\n",
+      "        [8, 8, 0, 5, 1],\n",
+      "        [0, 5, 0, 3, 5]])\n",
+      "tensor([[9, 3, 5, 4],\n",
+      "        [8, 3, 1, 3],\n",
+      "        [0, 5, 5, 3]])\n"
+     ]
+    }
+   ],
+   "execution_count": 58
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "ecb76577b372b4"
+   "id": "5568ad0c04e0f8a2"
   }
  ],
  "metadata": {
