--- a/AI Learn/Stage 7 DeepLearning/pytorch_intro.ipynb
+++ b/AI Learn/Stage 7 DeepLearning/pytorch_intro.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-02-11T05:54:20.866680Z",
-     "start_time": "2025-02-11T05:54:14.109633Z"
+     "end_time": "2025-02-13T04:32:49.529025Z",
+     "start_time": "2025-02-13T04:32:36.307509Z"
     }
    },
    "source": [
@@ -782,12 +782,238 @@
    "execution_count": 58
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-12T08:47:02.233458Z",
+     "start_time": "2025-02-12T08:47:02.228397Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 张量形状操作\n",
+    "# 1. reshape\n",
+    "t = torch.tensor([[10, 20, 30], [40, 50, 60]])\n",
+    "# 1. 使用 shape 属性或者 size 方法都可以获得张量的形状\n",
+    "print(t.shape, t.shape[0], t.shape[1])\n",
+    "print(t.size(), t.size()[0], t.size()[1])\n",
+    "# 2. 使用 reshape 函数修改张量形状\n",
+    "t_ = t.reshape(2, -1)   # -1 表示自动计算\n",
+    "print(t_)"
+   ],
+   "id": "5568ad0c04e0f8a2",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3]) 2 3\n",
+      "torch.Size([2, 3]) 2 3\n",
+      "tensor([[10, 20, 30],\n",
+      "        [40, 50, 60]])\n"
+     ]
+    }
+   ],
+   "execution_count": 16
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-12T08:56:41.735840Z",
+     "start_time": "2025-02-12T08:56:41.708111Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 2. transpose, permute\n",
+    "torch.manual_seed(0)\n",
+    "t = torch.tensor(np.random.randint(0, 10, [3, 4, 5]))\n",
+    "\n",
+    "t1 = t.reshape(4, 3, 5)          # 重新计算维度\n",
+    "t2 = torch.transpose(t, 0, 1)     # 直接交换 0、1维, 一次仅能交换2个维度\n",
+    "t3 = torch.permute(t, (1, 0, 2)) # 交换 1、0维, 一次交换任意个维度\n",
+    "\n",
+    "t1.shape, t2.shape, t3.shape"
+   ],
+   "id": "59ec85414ba67a8b",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([4, 3, 5]), torch.Size([4, 3, 5]), torch.Size([4, 3, 5]))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-12T09:31:47.417704Z",
+     "start_time": "2025-02-12T09:31:47.400613Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 3. view, contiguous\n",
+    "t = torch.tensor([[10, 20, 30], [40, 50, 60]])\n",
+    "\n",
+    "print(\"是否连续:\", t1.is_contiguous())\n",
+    "t1 = t.view(3, 2)   # 连续的, 可运行\n",
+    "print(t1.shape)\n",
+    "\n",
+    "t2 = torch.transpose(t, 0, 1)\n",
+    "print(\"是否连续:\", t2.is_contiguous())\n",
+    "#t2 = t2.view(2, 3)  # 形状改变, 非连续的, 不可运行\n",
+    "t2 = t2.contiguous().view(2, 3) # 调用 contiguous() 方法, 使张量连续\n",
+    "print(t2.shape)\n"
+   ],
+   "id": "1cc799ebfe58da2d",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "是否连续: True\n",
+      "torch.Size([3, 2])\n",
+      "是否连续: False\n",
+      "torch.Size([2, 3])\n"
+     ]
+    }
+   ],
+   "execution_count": 10
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-12T09:46:28.281353Z",
+     "start_time": "2025-02-12T09:46:28.275795Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 4. squeeze, unsqueeze\n",
+    "\n",
+    "torch.manual_seed(0)\n",
+    "t = torch.tensor(np.random.randint(0, 10, [1, 3, 1, 5]))\n",
+    "print(t.shape)\n",
+    "\n",
+    "t1 = t.squeeze()    # 删除所有1维\n",
+    "print(t1.shape)\n",
+    "\n",
+    "t2 = t.squeeze(0)   # 删除指定的1维, 若指定位置非1维, 则不删\n",
+    "print(t2.shape)\n",
+    "\n",
+    "t3 = t1.unsqueeze(-1)# 在指定位置添加1维, -1 表示最后一个维度\n",
+    "print(t3.shape)\n"
+   ],
+   "id": "681ada560059274e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([1, 3, 1, 5])\n",
+      "torch.Size([3, 5])\n",
+      "torch.Size([3, 1, 5])\n",
+      "torch.Size([3, 5, 1])\n"
+     ]
+    }
+   ],
+   "execution_count": 17
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-12T09:59:35.412382Z",
+     "start_time": "2025-02-12T09:59:35.348267Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# 张量运算函数\n",
+    "torch.manual_seed(0)\n",
+    "t = torch.tensor(np.random.randint(0, 10, [2, 3]), dtype=torch.float64)\n",
+    "# 1. 均值\n",
+    "t1 = t.mean()\n",
+    "t2 = t.mean(dim=0) # 按列求均值\n",
+    "t3 = t.mean(dim=1) # 按行求均值\n",
+    "# 2. 求和\n",
+    "t4 = t.sum()    # 全部求和\n",
+    "#t = t.sum(dim=0)\n",
+    "# 3. 平方\n",
+    "t5 = t.pow(2)   # 每个元素平方\n",
+    "# 4. 平方根\n",
+    "t6 = t.sqrt()   # 每个元素平方根\n",
+    "# 5. e^\n",
+    "t7 = t.exp()    # 每个元素exp\n",
+    "# 6. log\n",
+    "t8 = t.log()    # 每个元素log, 默认以e为底\n",
+    "t9 = t.log10()  # 每个元素log, 以10为底\n",
+    "\n",
+    "t, t1, t2, t3, t4, t5, t6, t7, t8, t9\n"
+   ],
+   "id": "6d5f486598dc0804",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[9., 0., 0.],\n",
+       "         [4., 9., 0.]], dtype=torch.float64),\n",
+       " tensor(3.6667, dtype=torch.float64),\n",
+       " tensor([6.5000, 4.5000, 0.0000], dtype=torch.float64),\n",
+       " tensor([3.0000, 4.3333], dtype=torch.float64),\n",
+       " tensor(22., dtype=torch.float64),\n",
+       " tensor([[81.,  0.,  0.],\n",
+       "         [16., 81.,  0.]], dtype=torch.float64),\n",
+       " tensor([[3., 0., 0.],\n",
+       "         [2., 3., 0.]], dtype=torch.float64),\n",
+       " tensor([[8.1031e+03, 1.0000e+00, 1.0000e+00],\n",
+       "         [5.4598e+01, 8.1031e+03, 1.0000e+00]], dtype=torch.float64),\n",
+       " tensor([[2.1972,   -inf,   -inf],\n",
+       "         [1.3863, 2.1972,   -inf]], dtype=torch.float64),\n",
+       " tensor([[0.9542,   -inf,   -inf],\n",
+       "         [0.6021, 0.9542,   -inf]], dtype=torch.float64))"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 23
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-13T06:12:09.605484Z",
+     "start_time": "2025-02-13T06:12:09.505066Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "",
+   "id": "4e0bb83e57097993",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "execution_count": 2
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "5568ad0c04e0f8a2"
+   "id": "ac8e388022657ab4"
   }
  ],
  "metadata": {
